# fastapi-chat-api

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  README.ru.md  docker-compose.yml  pyproject.toml  requests.http
alembic/: env.py
alembic/versions/: 332e77487b9d_add_joined_at_to_room_members.py  9be18c1cad4e_add_role_to_room_members_and_is_admin_.py  dda404d9a171_fix_file_uploads_room_id_foreign_key.py  ebc60beebc08_add_thumbnail_path_to_file_uploads.py  f5fdb17a719d_initial.py  fb2221adbfaf_add_avatar_url_to_rooms.py
app/: dependencies.py  main.py
app/core/: celery_app.py  config.py  connection_manager.py  constants.py  database.py  security.py
app/models/: __init__.py  file_upload.py  message.py  room.py  room_member.py  scheduled_message.py  user.py
app/routers/: auth.py  messages.py  rooms.py  users.py  ws.py
app/schemas/: file_upload.py  message.py  room.py  user.py
app/services/: file_service.py
app/tasks/: image_tasks.py
tests/: conftest.py  manual_ws_test.py  requests.http  test_auth.py  test_rooms.py
